--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
+    "next-sanity": "^7.0.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
