--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "portfolio-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@sanity/image-url": "^1.0.2",
-    "framer-motion": "^10.18.0",
-    "next": "14.1.0",
-    "next-sanity": "^7.0.12",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
-  }
+    "name": "portfolio-next",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@chakra-ui/next-js": "^2.2.0",
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@sanity/image-url": "^1.0.2",
+        "@portabletext/react": "^3.0.11",
+        "framer-motion": "^10.18.0",
+        "next": "14.1.0",
+        "next-sanity": "^7.0.12",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-icons": "^5.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "typescript": "^5"
+    }
 }
