--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
-        "@sanity/image-url": "^1.0.2",
         "@portabletext/react": "^3.0.11",
+        "@sanity/image-url": "^1.0.2",
         "framer-motion": "^10.18.0",
         "next": "14.1.0",
         "next-sanity": "^7.0.12",
         "react": "^18",
         "react-dom": "^18",
-        "react-icons": "^5.0.1"
+        "react-icons": "^5.0.1",
+        "resend": "^3.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
